<resources>
    <string name="app_name">易鲜农</string>
    <string name="search_hint">Search</string>
    <string name="imtrue">确定</string>
    <string name="cancel">取消</string>

    <!--底部菜单栏文字-->
    <string name="main_text">首页</string>
    <string name="classify_text">分类</string>
    <string name="message_text">消息</string>
    <string name="cart_text">购物车</string>
    <string name="my_text">我的</string>


    <!-- slidingtutorial start/welcome引导页-->
    <string name="text_web_ceo">水果/海鲜产品</string>
    <string name="text_web_dev">您需要的农产品应有尽有</string>
    <string name="text_e_commerce">必不可少的农产品购物app</string>
    <string name="empty_no_data">没有请求到数据，点击重试...</string>
    <string name="empty_network_error">网络错误，点击重试！</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="name">昵称</string>
    <string name="editPersonInfo">编辑个人信息</string>
    <string name="yourSay">一句话描述</string>
    <string name="save">保存</string>
    <string name="real_name">真实姓名</string>
    <string name="sfz">身份证号</string>
    <string name="phone_num">手机号</string>


    <string name="top_search1">新鲜水果/海鲜水产/猪牛羊肉</string>
    <string name="top_search2">禽类蛋品/新鲜蔬菜/速冻食品</string>
    <string name="load_ing">正在加载…</string>
    <string name="load_complete">加载成功</string>
    <string name="coming_soon_tip">木有相应数据哦~~~</string>

    <string name="top_news_title">农头条</string>
    <string name="favr_title">为您推荐</string>


    <string name="my_order">我的订单</string>
    <string name="wait_pay_order">待付款</string>
    <string name="wait_confirm_order">待收货</string>
    <string name="complete_order">已完成</string>
    <string name="wait_evaluation">已取消</string>
    <string name="my_center">我的中心</string>
    <string name="my_money">我的余额</string>
    <string name="my_bill">我的账单</string>
    <string name="my_coupon">优惠券</string>
    <string name="my_vip">我的特权</string>
    <string name="my_evaluation">我的评价</string>
    <string name="my_goodsfrom">关心货源</string>
    <string name="my_address">收货地址</string>
    <string name="my_question">常见问题</string>
    <string name="my_phone">客服电话</string>
    <string name="my_opinion">意见反馈</string>
    <string name="my_exit">退出登录</string>


    <string name="sldinglayout_bg_power_info">author site: www.pgg-pgg.com</string>
    <string name="sldinglayout_bg_developer_info">©2015 - 2018  Developed by pgg-pgg</string>
    <string name="recommend">推荐</string>


</resources>
