<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/layout_title"
            layout="@layout/layout_title" />

        <FrameLayout
            android:id="@+id/userheader_userinfo"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_head_img_userinfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ocnyang" />

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_gravity="bottom|right"
                android:background="@drawable/corner_mark_bg"
                android:scaleType="centerInside"
                android:src="@drawable/ic_photo_camera_white_24dp" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_person_black_24dp" />

            <EditText
                android:id="@+id/user_name_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:maxLength="16" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_extension_black_24dp" />

            <EditText
                android:id="@+id/user_geyan_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/yourSay"
                android:inputType="text"
                android:maxLength="128" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_user_real_name" />

            <EditText
                android:id="@+id/user_real_name_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/real_name"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_user_sfz" />

            <EditText
                android:id="@+id/user_sfz_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sfz"
                android:inputType="text" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginRight="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/icon_user_phone_num" />

            <EditText
                android:id="@+id/user_phone_userinfo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_num"
                android:inputType="text" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>